# AgentOps

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
agentops/: __init__.py  artifacts.py  budget.py  bundles.py  cli.py  codex_cli_runner.py  config.py  git_ops.py  misdirected_writes.py  models.py  operator_run.py  orchestrator.py  path_safety.py  plan.py  policy.py  pr_loop.py  profiles.py  prompting.py  provenance.py  provider_failures.py  repo_lock.py  result_guard_v2.py  review.py  roadmap_schema.py  runners.py  scope_creep.py  self_fix.py  state.py  task_recovery.py  task_settlement.py  timeline.py  usage.py  validation.py  validation_baseline.py  validation_env.py  web.py  worktree_guard.py
docs/: admin-panel-architecture.md  architecture.md  code-map.md  codex-for-oss-application.md  contributor-roadmap.md  cost-model.md  demo-recording.md  demo.md  failure-modes.md  gated-roadmap-runner.md  local-web-ui.md  model-profile-registry.md  night-run-report.md  observability.md  operator-reliability-audit.md  operator-run-harness.md  operator-runbook.md  p3-runtime-hardening.md  public-release-audit.md  public-release-checklist.md  roadmap-format.md  roadmap-next.md  roadmap-planning-guidelines.md  runtime-containment.md  sandboxing-recipes.md  security.md  two-agent-strategy.md  usability-mvp.md  usage-ledger.md  why-agentops-for-codex.md
schemas/: codex_review.schema.json  review_verdict.schema.json  roadmap.schema.json
tests/: conftest.py  test_artifacts.py  test_audit_summaries.py  test_budget.py  test_bundles.py  test_cli.py  test_cli_profiles.py  test_codex_cli_runner.py  test_codex_reviewer_model.py  test_config.py  test_directory_with_same_prefix_as_file.py  test_executor_watchdog.py  test_gated_roadmap.py  test_git_ops.py  test_misdirected_writes.py  test_models.py  test_multi_commit_merge.py  test_operator_acceptance.py  test_operator_run.py  test_orchestrator_dry_run.py  test_orchestrator_failures.py  test_p3_integration.py  test_path_safety.py  test_plan.py  test_policy.py  test_pr_loop.py  test_profiles.py  test_prompt_new.py  (+31 more)
(+25 files in other folders)
